<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grid_layout_background">-->

    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2">

        <android.support.v7.widget.CardView
            style="@style/card_catalog.left"
>

            <ImageView
                android:id="@+id/imageSmartphone"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_smartphone"
                android:src="@drawable/smartphone" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.right">

            <ImageView
                android:id="@+id/imageGraphicTablet"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_graphic_tablet"
                android:src="@drawable/graphic_tablet" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.left">

            <ImageView
                android:id="@+id/imageLaptop"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_laptop"
                android:src="@drawable/laptop" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.right">

            <ImageView
                android:id="@+id/imageCamera"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_camera"
                android:src="@drawable/camera" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.left">

            <ImageView
                android:id="@+id/imageSpeakers"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_speakers"
                android:src="@drawable/speakers" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.right">

            <ImageView
                android:id="@+id/imageHeadphones"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_headphones"
                android:src="@drawable/headphones" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.left">

            <ImageView
                android:id="@+id/image_speakers2"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_speakers"
                android:src="@drawable/speakers" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.right">

            <ImageView
                android:id="@+id/image_headphones2"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_headphones"
                android:src="@drawable/headphones" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.left">

            <ImageView
                android:id="@+id/image_speakers3"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_speakers"
                android:src="@drawable/speakers" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/card_catalog.right">

            <ImageView
                android:id="@+id/image_headphones3"
                style="@style/catalog_image"
                android:contentDescription="@string/content_description_headphones"
                android:src="@drawable/headphones" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.GridLayout>
<!--
</ScrollView>-->
